--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
         <!-- Auth Section: Sign in/up options -->
         <div id="authSection">
-            <button type="submit" id="gsi" class="btn-primary" >Sign in with Google</button>
+            <button type="submit" id="gsi" class="btn-primary">Sign in with Google</button>
             <button id="emailSignIn" class="btn-primary2" onclick="location.href='email-signin.html'">Sign in with Email</button>
             <button id="emailSignUp" class="btn-secondary" onclick="location.href='email-signup.html'">Sign up with Email</button>
         </div>
@@ -34,10 +34,60 @@
         <!-- Booking Section: Main functionality -->
         <div id="bookingSection" style="display: none;">
             <h3>Book an Ambulance</h3>
-            <button class="btn-primary" id="bookButton" onclick="location.href='booking.html'">Go to Book Ambulance</button>
+            <button class="btn-primary" id="bookButton">Go to Book Ambulance</button>
         </div>
     </div>
 
- 
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
+        import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-auth.js";
+
+        // Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyC9HFAKmE8J1UcsdDf6mfvKSeTDccdqwkg",
+            authDomain: "ambcall-14461.firebaseapp.com",
+            projectId: "ambcall-14461",
+            storageBucket: "ambcall-14461.firebasestorage.app",
+            messagingSenderId: "978623448666",
+            appId: "1:978623448666:web:790d5f07ee0fb01c74fa63",
+            measurementId: "G-D0GN8R96HP"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+
+        // Handle authentication state changes
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                document.getElementById("authSection").style.display = "none";
+                document.getElementById("welcomeSection").style.display = "block";
+                document.getElementById("bookingSection").style.display = "block";
+                document.getElementById("userName").textContent = user.displayName || user.email || "User";
+            } else {
+                document.getElementById("authSection").style.display = "block";
+                document.getElementById("welcomeSection").style.display = "none";
+                document.getElementById("bookingSection").style.display = "none";
+            }
+        });
+
+        // Handle "Book an Ambulance" button click
+        document.getElementById("bookButton").addEventListener("click", () => {
+            window.location.href = "booking.html";
+        });
+
+        // Handle sign-out
+        document.getElementById("signOut").addEventListener("click", () => {
+            signOut(auth)
+                .then(() => {
+                    // Clear local storage and reload the page
+                    localStorage.clear();
+                    location.reload();
+                })
+                .catch((error) => {
+                    console.error("Error during sign-out:", error);
+                });
+        });
+    </script>
 </body>
 </html>
