--- a/results.html
+++ b/results.html
@@ -9,80 +9,18 @@
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <style>
     html, body {
-<<<<<<< HEAD
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        background: url('assets/resultbg.jpg') no-repeat center center fixed; /* Replace with your new image */
-        background-size: cover;
-        font-family: Arial, sans-serif;
-        color: white;
-    }
-
-    #map {
-        height: 500px;
-        width: 100%;
-    }
-
-    .results-container {
-        text-align: center;
-        max-width: 600px;
-        margin: 0 auto;
-        padding: 20px;
-        background: rgba(0, 0, 0, 0.6);
-        border-radius: 10px;
-    }
-
-    .hospital-list {
-        margin-bottom: 20px;
-        padding: 10px;
-        background: rgba(0, 0, 0, 0.8);
-        border-radius: 10px;
-    }
-
-    .hospital-list ul {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-    }
-
-    .hospital-list li {
-        margin: 10px 0;
-        padding: 10px;
-        background: rgba(255, 255, 255, 0.2);
-        border-radius: 5px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        color: white;
-    }
-
-    .hospital-list button {
-        background-color: #007bff;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        padding: 5px 10px;
-        cursor: pointer;
-    }
-
-    .hospital-list button:hover {
-        background-color: #0056b3;
-=======
       margin: 0;
       padding: 0;
       height: 100%;
-      background: url('assets/amb2.jpg') no-repeat center center fixed;
+      background: url('assets/resultbg.jpg') no-repeat center center fixed;
       background-size: cover;
       font-family: Arial, sans-serif;
       color: white;
     }
-
     #map {
       height: 500px;
       width: 100%;
     }
-
     .results-container {
       text-align: center;
       max-width: 600px;
@@ -91,20 +29,17 @@
       background: rgba(0, 0, 0, 0.6);
       border-radius: 10px;
     }
-
     .hospital-list {
       margin-bottom: 20px;
       padding: 10px;
       background: rgba(0, 0, 0, 0.8);
       border-radius: 10px;
     }
-
     .hospital-list ul {
       list-style: none;
       padding: 0;
       margin: 0;
     }
-
     .hospital-list li {
       margin: 10px 0;
       padding: 10px;
@@ -115,7 +50,6 @@
       align-items: center;
       color: white;
     }
-
     .hospital-list button {
       background-color: #007bff;
       color: white;
@@ -124,10 +58,29 @@
       padding: 5px 10px;
       cursor: pointer;
     }
-
     .hospital-list button:hover {
       background-color: #0056b3;
->>>>>>> 58a6da993c2ec4995d358e0f8c2d41267197745e
+    }
+    @media (max-width: 600px) {
+      #map {
+        height: 300px;
+      }
+      .results-container {
+        padding: 10px;
+        max-width: 98vw;
+      }
+      .hospital-list {
+        padding: 5px;
+      }
+      .hospital-list li {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 8px;
+      }
+      .hospital-list button {
+        margin-top: 8px;
+        width: 100%;
+      }
     }
   </style>
 </head>
@@ -207,17 +160,9 @@
         })
         .catch(err => console.error("Reverse geocoding failed", err));
 
-<<<<<<< HEAD
       const radius = 10000;
       const overpassUrl = `https://overpass-api.de/api/interpreter?data=[out:json];node[amenity=hospital](around:${radius},${userLatitude},${userLongitude});out;`;
 
-=======
-      // Increased the radius to 10 km (10000 meters)
-      const radius = 10000;
-      const overpassUrl = `https://overpass-api.de/api/interpreter?data=[out:json];node[amenity=hospital](around:${radius},${userLatitude},${userLongitude});out;`;
-
-      // Removed unwanted keywords filter to show more hospitals
->>>>>>> 58a6da993c2ec4995d358e0f8c2d41267197745e
       fetch(overpassUrl)
         .then(res => res.json())
         .then((data) => {
@@ -231,11 +176,7 @@
           const top5Hospitals = hospitals.slice(0, 5);
 
           const nearestHospitalsList = document.getElementById("nearestHospitals");
-<<<<<<< HEAD
           nearestHospitalsList.innerHTML = "";
-=======
-          nearestHospitalsList.innerHTML = ""; // Clear existing list
->>>>>>> 58a6da993c2ec4995d358e0f8c2d41267197745e
 
           if (top5Hospitals.length < 5) {
             console.warn("Not enough hospitals found in the area.");
@@ -264,10 +205,6 @@
               }
 
               try {
-<<<<<<< HEAD
-                // Save booking to Firestore
-=======
->>>>>>> 58a6da993c2ec4995d358e0f8c2d41267197745e
                 await addDoc(collection(db, "bookings"), {
                   hospitalName: hospitalName,
                   userPhoneNumber: userPhone,
@@ -280,29 +217,6 @@
                   timestamp: new Date()
                 });
 
-<<<<<<< HEAD
-                // WhatsApp Notification
-                const whatsappNumber = "919412965395"; // International format
-                const message = encodeURIComponent(
-                  `🚨 *NEW AMBULANCE BOOKING REQUEST* 🚨\n\n` +
-                  `🏥 *Hospital*: ${hospitalName}\n` +
-                  `📞 *Patient Phone*: ${userPhone}\n` +
-                  `📍 *Location*: ${userLocation}\n` +
-                  `🗺️ *Google Maps*: ${gmapLink}\n\n` +
-                  `*Coordinates*\n` +
-                  `Latitude: ${userLatitude}\n` +
-                  `Longitude: ${userLongitude}\n\n` +
-                  `⚠️ Please respond immediately!`
-                );
-
-                // Open WhatsApp in new tab
-                window.open(
-                  `https://wa.me/${whatsappNumber}?text=${message}`,
-                  '_blank'
-                );
-
-=======
->>>>>>> 58a6da993c2ec4995d358e0f8c2d41267197745e
                 alert(
                   `✅ Ambulance Booked!\n\n` +
                   `🏥 Hospital: ${hospitalName}\n` +
@@ -330,11 +244,7 @@
     }
 
     function calculateDistance(lat1, lon1, lat2, lon2) {
-<<<<<<< HEAD
       const R = 6371;
-=======
-      const R = 6371; // Radius of the Earth in km
->>>>>>> 58a6da993c2ec4995d358e0f8c2d41267197745e
       const dLat = (lat2 - lat1) * Math.PI / 180;
       const dLon = (lon2 - lon1) * Math.PI / 180;
       const a =
@@ -342,16 +252,8 @@
         Math.cos(lat1 * Math.PI / 180) * Math.cos(lat2 * Math.PI / 180) *
         Math.sin(dLon / 2) * Math.sin(dLon / 2);
       const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
-<<<<<<< HEAD
       return R * c;
     }
   </script>
 </body>
 </html>
-=======
-      return R * c; // Distance in km
-    }
-  </script>
-</body>
-</html>
->>>>>>> 58a6da993c2ec4995d358e0f8c2d41267197745e
